k8s/kafka-connect-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-connect
  labels:
    name: kafka-connect
spec:
  replicas: 1
  selector:
    matchLabels:
      service: kafka-connect
  template:
    metadata:
      labels:
        service: kafka-connect
    spec:
      enableServiceLinks: false
      containers:
      - name: kafka-connect
        command:
        - bash
        - -c
        - |
            confluent-hub install --no-prompt debezium/debezium-connector-mysql:latest
            confluent-hub install --no-prompt debezium/debezium-connector-postgresql:latest
            confluent-hub install --no-prompt confluentinc/kafka-connect-datagen:0.4.0
            /etc/confluent/docker/run
        image: confluentinc/cp-kafka-connect:5.5.1
      #  volumeMounts:
      #  - name: kafka-connect-volume-mount
      #    mountPath: /var/lib/kafka-connectql/data
      #    subPath: kafka-connect
        ports:
        - containerPort: 8083
        resources:
         limits:
            cpu: 2
            memory: 2500Mi
      restartPolicy: Always
    #  volumes:
    #  - name: kafka-connect-volume-mount
    #    persistentVolumeClaim:
    #      claimName: kafka-connect-pvc
