k8s/kafka-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  labels:
    name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      service: kafka
  template:
    metadata:
      labels:
        service: kafka
    spec:
      enableServiceLinks: false
      containers:
      - name: kafka
        image: confluentinc/cp-kafka:5.5.1
      #  volumeMounts:
      #  - name: kafka-volume-mount
      #    mountPath: /var/lib/kafkaql/data
      #    subPath: kafka
        ports:
        - containerPort: 9092
        - containerPort: 9999
        - containerPort: 19092
        resources:
         limits:
            cpu: 500m
            memory: 500Mi
      restartPolicy: Always
    #  volumes:
    #  - name: kafka-volume-mount
    #    persistentVolumeClaim:
    #      claimName: kafka-pvc
