k8s/kafka-rest-proxy-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-rest-proxy
  labels:
    name: kafka-rest-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      service: kafka-rest-proxy
  template:
    metadata:
      labels:
        service: kafka-rest-proxy
    spec:
      containers:
      - name: kafka-rest-proxy
        image: confluentinc/cp-kafka-rest:5.5.1
      #  volumeMounts:
      #  - name: kafka-rest-proxy-volume-mount
      #    mountPath: /var/lib/kafka-rest-proxyql/data
      #    subPath: kafka-rest-proxy
        ports:
        - containerPort: 8082
        resources:
         limits:
            cpu: 500m
            memory: 500Mi
      restartPolicy: Always
    #  volumes:
    #  - name: kafka-rest-proxy-volume-mount
    #    persistentVolumeClaim:
    #      claimName: kafka-rest-proxy-pvc
