k8s/kafka-schema-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-schema-registry
  labels:
    name: kafka-schema-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      service: kafka-schema-registry
  template:
    metadata:
      labels:
        service: kafka-schema-registry
    spec:
      containers:
      - name: kafka-schema-registry
        image: confluentinc/cp-schema-registry:5.5.1
      #  volumeMounts:
      #  - name: kafka-schema-registry-volume-mount
      #    mountPath: /var/lib/kafka-schema-registryql/data
      #    subPath: kafka-schema-registry
        ports:
        - containerPort: 8081
        resources:
         limits:
            cpu: 500m
            memory: 500Mi
      restartPolicy: Always
    #  volumes:
    #  - name: kafka-schema-registry-volume-mount
    #    persistentVolumeClaim:
    #      claimName: kafka-schema-registry-pvc
