k8s/mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mongo
  template:
    metadata:
      labels:
        service: mongo
    spec:
      containers:
      - name: mongo
        image: mongo
        ports:
        - containerPort: 28081
        resources:
         limits:
            cpu: 500m
            memory: 500Mi
      restartPolicy: Always
