k8s/mongo-express-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  labels:
    name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mongo-express
  template:
    metadata:
      labels:
        service: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
        - containerPort: 28081
        resources:
         limits:
            cpu: 500m
            memory: 500Mi
      restartPolicy: Always
