k8s/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      service: postgres
  template:
    metadata:
      labels:
        service: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:13-alpine
      #  volumeMounts:
      #  - name: postgres-volume-mount
      #    mountPath: /var/lib/postgresql/data
      #    subPath: postgres
        resources:
         limits:
            cpu: 500m
            memory: 500Mi
      restartPolicy: Always
    #  volumes:
    #  - name: postgres-volume-mount
    #    persistentVolumeClaim:
    #      claimName: postgres-pvc
