k8s/kafka-connect-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-connect
  labels:
    service: kafka-connect
spec:
  selector:
    service: kafka-connect
  type: ClusterIP
  ports:
  - name: tcp-8083
    protocol: TCP
    port: 8083
    targetPort: 8083
