k8s/kafka-connect-ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-connect-ui
  labels:
    service: kafka-connect-ui
spec:
  selector:
    service: kafka-connect-ui
  type: ClusterIP
  ports:
  - name: tcp-8000
    protocol: TCP
    port: 8000
    targetPort: 8000
