k8s/kafka-rest-proxys-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-rest-proxy
  labels:
    service: kafka-rest-proxy
spec:
  selector:
    service: kafka-rest-proxy
  type: ClusterIP
  ports:
  - name: tcp-8082
    protocol: TCP
    port: 8082
    targetPort: 8082
