k8s/kafka-schema-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-schema-registry
  labels:
    service: kafka-schema-registry
spec:
  selector:
    service: kafka-schema-registry
  type: ClusterIP
  ports:
  - name: tcp-8081
    protocol: TCP
    port: 8081
    targetPort: 8081
