k8s/ksqldb-server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ksqldb-server
  labels:
    service: ksqldb-server
spec:
  selector:
    service: ksqldb-server
  type: ClusterIP
  ports:
  - name: tcp-8088
    protocol: TCP
    port: 8088
    targetPort: 8088
