k8s/mongo-express-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  labels:
    service: mongo-express
spec:
  selector:
    service: mongo-express
  type: ClusterIP
  ports:
  - port: 28081
