k8s/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    service: mongo
spec:
  selector:
    service: mongo
  type: ClusterIP
  ports:
  - port: 27017
