k8s/zookeper-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zoo
  labels:
    service: zoo
spec:
  selector:
    service: zoo
  type: ClusterIP
  ports:
  - name: tcp-2181
    protocol: TCP
    port: 2181
    targetPort: 2181
