k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdcdemo
  namespace: cdc-demo
  annotations:
    ingress.kubernetes.io/affinity: cookie
     #ingress.kubernetes.io/backend-protocol: HTTPS
     #ingress.kubernetes.io/secure-backends: "true"
    ingress.kubernetes.io/session-cookie-hash: sha1
    ingress.kubernetes.io/session-cookie-name: route
    ingress.kubernetes.io/session-cookie-path: /
    ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
     #nginx.ingress.kubernetes.io/backend-protocol: HTTPS
     #nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-name: route
    nginx.ingress.kubernetes.io/session-cookie-path: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: cdc-poc
    http:
      paths:
      - backend:
          service:
            name: microbank
            port:
              number: 9091
        path: /*
        pathType: ImplementationSpecific
  - host: cdc-poc-registry-ui
    http:
      paths:     
      - backend:
          service:
            name: kafka-schema-registry-ui
            port:
              number: 8000
        path: /*
        pathType: ImplementationSpecific
